Finish swagger descriptions for new registering and password reset
