# src/routes/authRouter/signUpRoute/signUpRoute.ts
@@ -32,6 +32,7 @@ import {
 import { generateOtp } from "../generateOtp";
 import { sendEmail, sendEmailPython } from "../sendEmail";
 
+//# Swagger описание SignUpRequestBody
 /**
  * @swagger
  * components:
@@ -51,8 +52,11 @@ import { sendEmail, sendEmailPython } from "../sendEmail";
  *           type: string
  *           description: Никнейм, которай пользователь ввел при регистрации
  *           example: soldat2004
+ *         userType:
+ *           type: string
+ *           description: Тип пользователя, может принимать значения 'SOLDIER', 'WAITING_FOR_SOLDIER', 'OTHER'
+ *           example: SOLDIER
  */
-
 export const signUpRoute = async (req: Request, res: Response) => {
   //# Check if all fields of json object are present in request
   if (missingRequestField(req, res, signUpRequestBodyProperties)) return res;
